--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.error.include-message=always
 server.port=8081
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
+logging.level.dts.logic.item.RdbItemsService=trace
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
