--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=2021a.vladislavb
-server.error.include-message=always
 
 server.port=8081
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
-logging.level.dts.logic.item.RdbItemsService=trace
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+# DB connectivity properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://database-1.crynfiiowsnw.us-east-1.rds.amazonaws.com:3306/VVVSA_DTS
+spring.datasource.username=admin
+spring.datasource.password=Scene16799!
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
